--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -18,52 +18,65 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v4
 
-      # 1. Setup Node.js (Required for Expo)
+      # 1. Setup Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20' # LTS version recommended
-          cache: 'npm'       # or 'yarn' if you use yarn
+          node-version: '20'
+          cache: 'npm'
 
-      # 2. Setup Java (Required for Android build)
+      # 2. Setup Java
       - name: Setup Java
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
-          java-version: '17' # React Native 0.73+ requires Java 17
-          #cache: 'gradle'    # Caches Gradle dependencies to speed up builds
-      - name: Validate Gradle files
-        uses: gradle/actions/setup-gradle@v3
-        with:
-          cache-disabled: true  
+          java-version: '17'
+
       # 3. Install Dependencies
       - name: Install dependencies
-        run: npm ci # 'ci' is faster and safer for pipelines than 'install'
+        run: npm ci
 
-      # 4. Generate Native Code (Crucial Step)
-      # This creates the 'android' folder and the 'gradlew' script
+      # 4. Generate Native Code (CNG)
+      # We do this BEFORE setting up Gradle so the wrapper exists
       - name: Expo Prebuild
-        run: npx expo prebuild --platform android 
+        run: npx expo prebuild --platform android
 
-      # 5. Make gradlew executable
-      # We must point to the folder we just created
+      # 5. Setup Gradle (The "Magic" Step)
+      # moved AFTER prebuild so it detects the 'android' folder
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
+        with:
+          # Point to the build-root created by Expo
+          build-root-directory: android
+          # This action handles saving/restoring the cache automatically
+          cache-read-only: false 
+          # generated-gradle-jars-cache-enabled: true
+
+      # 6. Make gradlew executable
       - name: Make gradlew executable
         run: chmod +x android/gradlew
 
-      # 6. Build the APK
-      # We explicitly change directory (cd android) to run the build
+      # 7. Build the APK
+      # Optimization flags added:
+      # --build-cache: Enables the Gradle build cache
+      # --parallel: Compiles modules in parallel
+      # --configure-on-demand: Only configure relevant projects
+      # -x lint: Skip linting to save time (do linting in a separate PR check)
       - name: Build Android APK
         run: |
           cd android
-          ./gradlew assembleDebug 
+          ./gradlew assembleDebug \
+            --build-cache \
+            --parallel \
+            --configure-on-demand \
+            -x lint
 
-      # 7. Upload to Firebase
+      # 8. Upload to Firebase
       - name: Upload Artifact to Firebase App Distribution
         uses: wzieba/Firebase-Distribution-Github-Action@v1.7.0
         with:
           appId: ${{ secrets.FIREBASE_APP_ID }}
           serviceCredentialsFileContent: ${{ secrets.CREDENTIAL_FILE_CONTENT }}
           groups: testers
-          # Note the updated path including 'android/'
           file: android/app/build/outputs/apk/debug/app-debug.apk
           releaseNotes: ${{ inputs.release_notes }}
